adding periods to figure captions in regression1, classification 1 and 2, clustering

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -190,7 +190,7 @@ for selecting the number of clusters.
 This procedure will separate the data into the following groups 
 denoted by color:
 
-```{r 10-toy-example-clustering, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of standardized bill length versus standardized flipper length with colored groups"}
+```{r 10-toy-example-clustering, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of standardized bill length versus standardized flipper length with colored groups."}
 ggplot(data, aes(y = bill_length_standardized, 
                  x = flipper_length_standardized, color = cluster)) +
   geom_point() +
