--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -489,7 +489,7 @@ image_read("img/version_control/clone_02.png") %>%
 Then open Jupyter, and click the Git+ icon on the file browser tab 
 (Figure \@ref(fig:clone-01)).
 
-```{r clone-01, fig.cap = 'The Jupyter Git Clone icon (red circle)', fig.retina = 2}
+```{r clone-01, fig.cap = 'The Jupyter Git Clone icon (red circle).', fig.retina = 2}
 image_read("img/version_control/clone_01.png") %>%
   image_crop("2400x1430+1")
 ```
@@ -674,7 +674,7 @@ image_read("img/version_control/git_pull_00.png") %>%
 You can tell Git to "pull" by \index{git!pull} clicking on the cloud icon with 
 the down arrow in Jupyter (Figure \@ref(fig:git-pull-01)).
 
-```{r git-pull-01, fig.cap = 'The Jupyter Git extension clone button', fig.retina = 2}
+```{r git-pull-01, fig.cap = 'The Jupyter Git extension clone button.', fig.retina = 2}
 image_read("img/version_control/git_pull_01.png")
 ```
 
@@ -725,7 +725,7 @@ not know whether to keep your version of the line(s), your collaborators
 version of the line(s), or some blend of the two. When this happens, Git will
 tell you that you have a merge conflict in certain file(s) (Figure \@ref(fig:merge-conflict-03)).
 
-```{r merge-conflict-03, fig.cap = 'Error message that indicates you and your collaborators made changes to the same line of the same file and that Git will not be able to automatically merge the changes', fig.retina = 2}
+```{r merge-conflict-03, fig.cap = 'Error message that indicates you and your collaborators made changes to the same line of the same file and that Git will not be able to automatically merge the changes.', fig.retina = 2}
 image_read("img/version_control/merge_conflict_03.png") %>%
   image_crop("3584x1900")
 ```
