Got pdf working with CRC template for chapter 1

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -1,4 +1,13 @@
 # R and the tidyverse {#intro}
+
+```{r intro-setup, include=FALSE}
+library(formatR)
+if (!knitr:::is_html_output()) {
+  options("width" = 56)
+  knitr::opts_chunk$set(tidy.opts = list(width.cutoff = 56, indent = 2), tidy = TRUE)
+}
+```
+
 ## Overview
 
 This chapter provides an introduction to data science and the R programming language.
@@ -84,7 +93,7 @@ the analysis as well as the selection of appropriate tools.\index{question!data 
 \index{causal question!definition}
 \index{mechanistic question!definition}
 
-Table: (\#tab:questions-table) Types of data analysis question. From [What is the question?](https://science.sciencemag.org/content/347/6228/1314) [@leek2015question] and [The Art of Data Science](https://leanpub.com/artofdatascience) [@peng2015art].
+Table: (\#tab:questions-table) Types of data analysis questions [@leek2015question; @peng2015art].
 
 | Question type | Description | Example |
 |---------------|-------------|---------|
@@ -236,13 +245,15 @@ file satisfies everything else that the `read_csv` function expects in the defau
 use-case. Figure \@ref(fig:img-read-csv) describes how we use the `read_csv`
 to read data into R. 
 
-``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the read_csv function", out.width="100%", fig.retina = 2}
+``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the read_csv function", fig.retina = 2}
 knitr::include_graphics("img/read_csv_function.jpeg")
 ```
 
+::: {.tiny}
 ```{r load-can-lang-data, warning=F, message=F}
 read_csv("data/can_lang.csv")
 ```
+:::
 
 > **In case you want to know more (optional):** There is another function
 > that also loads csv files named `read.csv`. We will *always* use 
@@ -298,7 +309,7 @@ Other symbols won't work since they have their own meanings in R. For example,
 the `+` symbol, R will complain and we will get an error!
 
 ```{r, eval = F}
-na+me <- 1
+na + me <- 1
 ```
 ```
 Error: unexpected assignment in "na+me <-"
@@ -548,7 +559,7 @@ To accomplish this, we will swap the x and y coordinate axes:
 ggplot(ten_lang, aes(x = mother_tongue, y = language)) +
   geom_bar(stat = "identity") +
   xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
-  ylab("Language") 
+  ylab("Language")
 ```
 
 Another big step forward, as shown in Figure \@ref(fig:barplot-mother-tongue-flipped)! There 
@@ -561,10 +572,13 @@ the `reorder` \index{reorder} function, which orders a variable (here `language`
 values of the second variable (`mother_tongue`). 
 
 ```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered"}
-ggplot(ten_lang, aes(x = mother_tongue, y = reorder(language, mother_tongue))) +
+ggplot(ten_lang, aes(
+  x = mother_tongue,
+  y = reorder(language, mother_tongue)
+)) +
   geom_bar(stat = "identity") +
   xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
-    ylab("Language") 
+  ylab("Language")
 ```
 
 Figure \@ref(fig:barplot-mother-tongue-reorder) provides a very clear and well-organized
@@ -612,7 +626,7 @@ ten_lang <- slice(arranged_lang, 1:10)
 # create the visualization
 ggplot(ten_lang, aes(
   x = mother_tongue,
-  y = reorder(language, mother_tongue)  # make sure the plot orders the bars by size
+  y = reorder(language, mother_tongue) # orders the bars by size
 )) +
   geom_bar(stat = "identity", fill = "steelblue") +
   xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
@@ -655,6 +669,7 @@ to you, and slowly but surely you will become more adept at understanding and na
 documentation like that shown in Figure \@ref(fig:01-help). But do keep in mind that the documentation
 is not written to *teach* you about a function; it is just there as a reference to *remind*
 you about the different arguments and usage of functions that you have already learned about elsewhere.
+
 ```{r 01-help, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The documentation for the `filter` function, including a high-level description, a list of arguments and their meanings, and more.", fig.retina = 2}
 knitr::include_graphics("img/help-filter.png")
 ```
