--- a/pdf/intro.Rmd
+++ b/pdf/intro.Rmd
@@ -1,9 +1,18 @@
 # R and the tidyverse {#intro}
+
+```{r intro-setup, include=FALSE}
+library(formatR)
+if (!knitr:::is_html_output()) {
+  options("width" = 56)
+  knitr::opts_chunk$set(tidy.opts = list(width.cutoff = 56, indent = 2), tidy = TRUE)
+}
+```
+
 ## Overview
 
 This chapter provides an introduction to data science and the R programming language.
 The goal here is to get your hands dirty right from the start: we will walk through an entire data analysis,
-and along the way introduce different types of data analysis questions, some fundamental programming 
+and along the way, introduce different types of data analysis questions, some fundamental programming 
 concepts in R, and the basics of loading, cleaning, and visualizing data. In the following chapters, we will
 dig into each of these steps in much more detail; but for now, let's jump in to see how much we can do 
 with data science!
@@ -41,7 +50,7 @@ Canada's [Calls to Action](http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf
 The data set we will study in this chapter is taken from 
 [the {canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has
 population language data collected during the 2016 Canadian census [@cancensus2016]. 
-In this data there are 214 languages recorded, each having 6 different properties:
+In this data, there are 214 languages recorded, each having six different properties:
 
 1. `category`: Higher-level language category, describing whether the language is an Official Canadian language, an Aboriginal (i.e., Indigenous) language, or a Non-Official and Non-Aboriginal language.
 2. `language`: The name of the language.
@@ -84,7 +93,7 @@ the analysis as well as the selection of appropriate tools.\index{question!data 
 \index{causal question!definition}
 \index{mechanistic question!definition}
 
-Table: (\#tab:questions-table) Types of data analysis question. From [What is the question?](https://science.sciencemag.org/content/347/6228/1314) [@leek2015question] and [The Art of Data Science](https://leanpub.com/artofdatascience) [@peng2015art].
+Table: (\#tab:questions-table) Types of data analysis questions [@leek2015question; @peng2015art].
 
 | Question type | Description | Example |
 |---------------|-------------|---------|
@@ -116,7 +125,7 @@ This is covered in detail in Chapter \@ref(viz), but again appears regularly thr
 3. **Classification:** \index{classification!overview} predicting a class or category for a new observation.
 Classification is used to answer predictive questions.
 For example, you might use classification to answer the following question:
-*given measurements of a tumour's average cell area and perimeter, is the tumour benign or malignant?*
+*given measurements of a tumor's average cell area and perimeter, is the tumor benign or malignant?*
 Classification is covered in Chapters \@ref(classification) and \@ref(classification2).
 4. **Regression:**  \index{regression!overview} predicting a quantitative value for a new observation. 
 Regression is also used to answer predictive questions.
@@ -128,7 +137,7 @@ dataset. Clustering is often used to answer exploratory questions.
 For example, you might use clustering to answer the following question:
 *what products are commonly bought together on Amazon?*
 Clustering is covered in Chapter \@ref(clustering).
-6. **Estimation:**  \index{estimation!overview} taking measurements for small number of items from a large group 
+6. **Estimation:**  \index{estimation!overview} taking measurements for a small number of items from a large group 
  and making a good guess for the average or proportion for the large group. Estimation 
 is used to answer inferential questions.
 For example, you might use estimation to answer the following question:
@@ -163,7 +172,7 @@ collect the data on, e.g., voters, cities, etc. We refer to the columns as \inde
 affiliations, cities' populations, etc. 
 
 
-```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="850pt", fig.retina = 2}
+```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/spreadsheet_vs_dataframe.PNG")
 ```
 
@@ -180,7 +189,7 @@ text with no formatting), we would see each row on its own line, and each entry 
 head -n 10 data/can_lang.csv
 ```
 
-To load this data into R so that we can do things with it (e.g, perform
+To load this data into R so that we can do things with it (e.g., perform
 analyses or create data visualizations), we will need to use a *function.* \index{function} A
 function is a special word in R that takes instructions (we call these
 *arguments*) \index{argument} and does something. The function we will use to load a `.csv` file
@@ -204,7 +213,7 @@ using the `library` function. \index{library} The `tidyverse` \index{tidyverse} 
 functions that we will use throughout this book to load, clean, wrangle, 
 and visualize data. 
 
-```{r load_tidyverse, message = TRUE, warning = TRUE}
+```{r load-tidyverse, message = TRUE, warning = TRUE}
 library(tidyverse)
 ```
 > **In case you want to know more (optional):** Notice that we got some extra
@@ -214,7 +223,7 @@ library(tidyverse)
 > natural when loading `tidyverse`, since `tidyverse` actually automatically
 > causes other packages to be imported too, such as `dplyr`.  In the future
 > when we load `tidyverse` in this book we will silence these messages to help
-> with readability of the book.  The `Conflicts` message is also totally normal
+> with the readability of the book.  The `Conflicts` message is also totally normal
 > in this circumstance.  This message tells you if functions from different
 > packages share the same name, which is confusing to R.  For example, in this
 > case, the `dplyr` package and the `stats` package both provide a function
@@ -235,14 +244,16 @@ language.  The file's name is the only argument we need to provide because our
 file satisfies everything else that the `read_csv` function expects in the default
 use-case. Figure \@ref(fig:img-read-csv) describes how we use the `read_csv`
 to read data into R. 
- 
-```{r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the `read_csv` function.", fig.retina = 2}
+
+``` {r img-read-csv, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the read_csv function", fig.retina = 2}
 knitr::include_graphics("img/read_csv_function.jpeg")
 ```
 
+::: {.tiny}
 ```{r load-can-lang-data, warning=F, message=F}
 read_csv("data/can_lang.csv")
 ```
+:::
 
 > **In case you want to know more (optional):** There is another function
 > that also loads csv files named `read.csv`. We will *always* use 
@@ -298,7 +309,7 @@ Other symbols won't work since they have their own meanings in R. For example,
 the `+` symbol, R will complain and we will get an error!
 
 ```{r, eval = F}
-na+me <- 1
+na + me <- 1
 ```
 ```
 Error: unexpected assignment in "na+me <-"
@@ -404,7 +415,7 @@ able to name things in R is useful: you can see that we are using the
 result of our earlier `filter` step (which we named `aboriginal_lang`) here 
 in the next step of the analysis!
 
-``` {r img-select, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the select function", out.width="1100pt", fig.retina = 2}
+``` {r img-select, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the select function", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/select_function.jpeg")
 ```
 
@@ -432,7 +443,7 @@ language, we will use the `arrange` function to order the rows in our
 arrange the rows in descending order (from largest to smallest),
 so we pass the column to the `desc` function before using it as an argument. 
 
-``` {r img-arrange, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the arrange function", out.width="1000pt", fig.retina = 2}
+``` {r img-arrange, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the arrange function", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/arrange_function.jpeg")
 ```
 
@@ -486,7 +497,7 @@ function and its common usage is illustrated in Figure \@ref(fig:img-ggplot).
 Figure \@ref(fig:barplot-mother-tongue) shows the resulting bar plot
 generated by following the instructions in Figure \@ref(fig:img-ggplot).
 
-```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a bar plot with the ggplot function", out.width="1100pt", fig.retina = 2}
+```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a bar plot with the ggplot function", out.width="100%", fig.retina = 2}
 knitr::include_graphics("img/ggplot_function.jpeg")
 ```
 
@@ -548,7 +559,7 @@ To accomplish this, we will swap the x and y coordinate axes:
 ggplot(ten_lang, aes(x = mother_tongue, y = language)) +
   geom_bar(stat = "identity") +
   xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
-  ylab("Language") 
+  ylab("Language")
 ```
 
 Another big step forward, as shown in Figure \@ref(fig:barplot-mother-tongue-flipped)! There 
@@ -561,10 +572,13 @@ the `reorder` \index{reorder} function, which orders a variable (here `language`
 values of the second variable (`mother_tongue`). 
 
 ```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered"}
-ggplot(ten_lang, aes(x = mother_tongue, y = reorder(language, mother_tongue))) +
+ggplot(ten_lang, aes(
+  x = mother_tongue,
+  y = reorder(language, mother_tongue)
+)) +
   geom_bar(stat = "identity") +
   xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
-    ylab("Language") 
+  ylab("Language")
 ```
 
 Figure \@ref(fig:barplot-mother-tongue-reorder) provides a very clear and well-organized
@@ -585,7 +599,7 @@ n.o.s. with over 60,000 Canadian residents reporting it as their mother tongue.
 In the block of code below, we put everything from this chapter together, with a few
 modifications. In particular, we have
 added a few more layers to make the data visualization even more effective.
-Specifically, we changed the colour of the bars and changed the background from
+Specifically, we changed the color of the bars and changed the background from
 grey to white to improve the contrast. We have also actually skipped the
 `select` step that we did above; since you specify the variable names to plot
 in the `ggplot` function, you don't actually need to `select` the columns in advance
@@ -612,7 +626,7 @@ ten_lang <- slice(arranged_lang, 1:10)
 # create the visualization
 ggplot(ten_lang, aes(
   x = mother_tongue,
-  y = reorder(language, mother_tongue)  # make sure the plot orders the bars by size
+  y = reorder(language, mother_tongue) # orders the bars by size
 )) +
   geom_bar(stat = "identity", fill = "steelblue") +
   xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
@@ -655,6 +669,7 @@ to you, and slowly but surely you will become more adept at understanding and na
 documentation like that shown in Figure \@ref(fig:01-help). But do keep in mind that the documentation
 is not written to *teach* you about a function; it is just there as a reference to *remind*
 you about the different arguments and usage of functions that you have already learned about elsewhere.
+
 ```{r 01-help, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The documentation for the `filter` function, including a high-level description, a list of arguments and their meanings, and more.", fig.retina = 2}
 knitr::include_graphics("img/help-filter.png")
 ```
