added figure references to API figs and fixed their sizing.

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -1042,10 +1042,9 @@ library(rtweet)
 ```
 This package provides an extensive set of functions to search Twitter for tweets, users, their followers, and more. 
 Let's construct a small data set of the last 400 tweets and retweets from the Tidyverse account. A few of the most recent tweets
-are shown below.
+are shown in Figure \@ref(fig:01-tidyverse-twitter).
 
-
-```{r 01-tidyverse-twitter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The Tidyverse Twitter feed. [Source](https://twitter.com/tidyverse?lang=en)", fig.retina = 2, out.width="800pt"}
+```{r 01-tidyverse-twitter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The Tidyverse Twitter feed. [Source](https://twitter.com/tidyverse?lang=en)", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/tidyverse_twitter.png")
 ```
 
@@ -1068,14 +1067,15 @@ we should abide by when using the API.
 
 After checking the Twitter website, it seems like asking for 400 tweets one time is acceptable.
 So we can use the `get_timelines` function to ask for the last 400 tweets from the Tidyverse account.
+
 ```r
 tidyverse_tweets <- get_timelines('tidyverse', n=400)
 ```
 
 When you call the `get_timelines` for the first time (or any other `rtweet` function that accesses the API), 
-you will see a browser pop-up that looks something like this:
+you will see a browser pop-up that looks something like Figure \@ref(fig:01-tidyverse-authorize).
 
-```{r 01-tidyverse-authorize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The rtweet authorization prompt.", fig.retina = 2, out.width="800pt"}
+```{r 01-tidyverse-authorize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The rtweet authorization prompt.", fig.retina = 2, out.width="100%"}
 knitr::include_graphics("img/authorize_question.png")
 ```
 
@@ -1097,23 +1097,28 @@ the one-time code they send you and provide that to the `rtweet` login page too.
 
 With the authentication setup out of the way, let's run the `get_timelines` function again to actually access
 the API and take a look at what was returned:
-```r
+
+```{r}
 tidyverse_tweets <- get_timelines('tidyverse', n=400)
 tidyverse_tweets
 ```
+
 ```{r 01-reading-hidden-load-tweets, echo = FALSE, message = FALSE, warning = FALSE}
 tidyverse_tweets <- read_csv("data/tweets.csv")
 tidyverse_tweets
 ```
+
 The data has quite a few variables! (Notice that the output above shows that we
 have a data table with 293 rows and 71 columns). Let's reduce this down to a
 few variables of interest: `created_at`,  `retweet_screen_name`, `is_retweet`,
 and `text`.
+
 ```{r 01-select-tweets, message = FALSE, warning = FALSE}
-tidyverse_tweets <- tidyverse_tweets %>% select(created_at, retweet_screen_name, 
+tidyverse_tweets <- tidyverse_tweets |> select(created_at, retweet_screen_name, 
                                                 is_retweet, text)
 tidyverse_tweets
 ```
+
 If you look back up at the image of the Tidyverse twitter page, you will
 recognize the text of the most recent few tweets in the above data frame.  In
 other words, we have successfully created a small data set using the Twitter
