added figure captions and references for web scraping figures.

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -879,22 +879,27 @@ website element for which you want an appropriate selector. For
 example, if we click the price of an apartment listing, we
 find that SelectorGadget shows us the selector `.result-price`
 in its toolbar, and highlights all the other apartment
-prices that would be obtained using that selector.
+prices that would be obtained using that selector (Figure \@ref(fig:sg1)).
 
-
-![](img/sg1.png)
+```{r sg1, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to obtain the CCS selector useful for obtaining apartment prices.", fig.retina = 2, out.width="100%"}
+knitr::include_graphics("img/sg1.png")
+```
 
 If we then click the size of an apartment listing, SelectorGadget shows us
 the `span` selector, and highlights much of the page; this indicates that the
-`span` selector is not specific enough to just capture apartment sizes. 
+`span` selector is not specific enough to just capture apartment sizes (Figure \@ref(fig:sg3)). 
 
-![](img/sg3.png)
+```{r sg3, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to obtain a CCS selector useful for obtaining apartment sizes.", fig.retina = 2, out.width="100%"}
+knitr::include_graphics("img/sg3.png")
+```
 
 To narrow the selector, we can click one of the highlighted elements that
 we *do not* want. For example, we can deselect the "pic/map" links, 
-resulting in only the data we want highlighted using the `.housing` selector.
+resulting in only the data we want highlighted using the `.housing` selector (Figure \@ref(fig:sg2)).
 
-![](img/sg2.png)
+```{r sg2, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to refine the CCS selector to one that is most useful for obtaining apartment sizes.", fig.retina = 2, out.width="100%"}
+knitr::include_graphics("img/sg2.png")
+```
 
 So to scrape information about the square footage and rental price
 of apartment listings, we need to use
@@ -930,13 +935,16 @@ We have checked the [Terms of Service document](https://foundation.wikimedia.org
 and it does not mention that web scraping is disallowed. 
 We will use the SelectorGadget tool to pick elements that we are interested in
 (city names and population counts) and deselect others to indicate that we are not 
-interested in them (province names), as shown in the screenshot  below.
+interested in them (province names), as shown in Figure \@ref(fig:sg4).
 
-![](img/sg4.png)
+```{r sg4, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Wikipedia webpage.", fig.retina = 2, out.width="100%"}
+knitr::include_graphics("img/sg4.png")
+```
 
 We include a link to a short video tutorial on this process at the end of the chapter
 in the additional resources section. SelectorGadget provides in its toolbar
 the following list of CSS selectors to use:
+
 ```
 td:nth-child(5), 
 td:nth-child(7), 
@@ -974,7 +982,8 @@ argument is a string. The `html_nodes` function then selects *nodes* from the HT
 match the CSS selectors you specified.  A *node* is an HTML tag pair (e.g.,
 `<td>` and `</td>` which defines the cell of a table) combined with the content
 stored between the tags. For our CSS selector `td:nth-child(5)`, an example
-node that would be selected would be: 
+node that would be selected would be:
+
 ```html
 <td style="text-align:left;background:#f0f0f0;">
 <a href="/wiki/London,_Ontario" title="London, Ontario">London</a>
@@ -989,6 +998,7 @@ build the list of selectors to maintain code readability; this avoids
 having one very long line of code with the string
 `"td:nth-child(5),td:nth-child(7),.infobox:nth-child(122) td:nth-child(1),.infobox td:nth-child(3)"`
 as the second argument of `html_nodes`:
+
 ```{r 01-select-nodes}
 selectors <- paste("td:nth-child(5)",
              "td:nth-child(7)",
@@ -1037,6 +1047,7 @@ API is that you don't need  a special *token* \index{API!token} to access it; yo
 make an account with them. Your access to the data will then be authenticated and controlled through
 your account username and password. If you have a Twitter account already (or are willing to make one), you can follow
 along with the examples that we show here. To get started, load the `rtweet` package:
+
 ```r
 library(rtweet)
 ```
