Got working-ish version of first 3 chapters

--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Data Science: A First Introduction"
-author: "Tiffany-Anne Timbers"
+author: "Tiffany-Anne Timbers, Trevor Campbell & Melissa Lee"
 date: "`r Sys.Date()`"
 knit: "bookdown::render_book"
 documentclass: krantz
@@ -11,8 +11,6 @@ colorlinks: yes
 lot: yes
 lof: yes
 fontsize: 12pt
-monofont: "Source Code Pro"
-monofontoptions: "Scale=0.7"
 graphics: yes
 site: bookdown::bookdown_site
 description: "This is a textbook for teaching a first introduction to data science."
