Figured out font & trim sizing

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -3,11 +3,12 @@
 # R and the tidyverse {#intro}
 
 ```{r intro-setup, include=FALSE}
-library(formatR)
-if (!knitr:::is_html_output()) {
-  options("width" = 56)
-  knitr::opts_chunk$set(tidy.opts = list(width.cutoff = 56, indent = 2), tidy = TRUE)
-}
+#library(formatR)
+#if (!knitr:::is_html_output()) {
+#  options("width" = 56)
+#  knitr::opts_chunk$set(tidy.opts = list(width.cutoff = 56, indent = 2), 
+#                        tidy = TRUE)
+#}
 ```
 
 ## Overview
@@ -573,10 +574,8 @@ the `reorder` \index{reorder} function, which orders a variable (here `language`
 values of the second variable (`mother_tongue`). 
 
 ```{r barplot-mother-tongue-reorder, fig.width=5.75, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered."}
-ggplot(ten_lang, aes(
-  x = mother_tongue,
-  y = reorder(language, mother_tongue)
-)) +
+ggplot(ten_lang, aes(x = mother_tongue,
+                     y = reorder(language, mother_tongue))) +
   geom_bar(stat = "identity") +
   xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
   ylab("Language")
@@ -625,10 +624,8 @@ arranged_lang <- arrange(aboriginal_lang, by = desc(mother_tongue))
 ten_lang <- slice(arranged_lang, 1:10)
 
 # create the visualization
-ggplot(ten_lang, aes(
-  x = mother_tongue,
-  y = reorder(language, mother_tongue) # orders the bars by size
-)) +
+ggplot(ten_lang, aes(x = mother_tongue,
+                     y = reorder(language, mother_tongue))) +
   geom_bar(stat = "identity", fill = "steelblue") +
   xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
   ylab("Language") +
