--- a/pdf/reading.Rmd
+++ b/pdf/reading.Rmd
@@ -84,13 +84,13 @@ knitr::include_graphics("img/filesystem.jpeg")
 **Reading `happiness_report.csv` using a relative path:**
 
 ```{r eval = FALSE}
-happiness_data <- read_csv("data/happiness_report.csv")
+happy_data <- read_csv("data/happiness_report.csv")
 ```
 
 **Reading `happiness_report.csv` using an absolute path:**
 
 ```{r eval = FALSE}
-happiness_data <- read_csv("/home/dsci-100/worksheet_02/data/happiness_report.csv")
+happy_data <- read_csv("/home/dsci-100/worksheet_02/data/happiness_report.csv")
 ```
 
 So which one should you use? Generally speaking, to ensure your code can be run 
@@ -371,8 +371,10 @@ t                                                       8f??3wn
           %~Ed2??<?w??
                        ?Pd(??J-?E???7?'t(?-GZ?????y???c~N?g[^_r?4
                                                                   yG?O
-                                                                      ?K??G?RPX?
-                                                                                                                    ]TUEe??O??c[???????6q??s??d?m???\???H?^????3} ?rZY? ?:L60?^?????XTP+?|?3???"~?3T
+                                                                      ?K??G?
+                                                                      
+                                                                                                                    
+     ]TUEe??O??c[???????6q??s??d?m???\???H?^????3} ?rZY? ?:L60?^?????XTP+?|?
 X?a??4VT?,D?Jq
 ```
 
@@ -785,9 +787,12 @@ what that data looks like! For example, let's say we are interested
 in knowing the average rental price (per square foot) of the most recently
 available one-bedroom apartments in Vancouver from 
 https://vancouver.craigslist.org. When we visit the Vancouver Craigslist
-website \index{Craigslist} and search for one-bedroom apartments, this is what we are shown:
+website \index{Craigslist} and search for one-bedroom apartments, 
+we should see something similar to Figure \@ref(fig:craigslist-human).
 
-![](img/craigslist_human.png)
+```{r craigslist-human, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Craigslist webpage of advertisements for one-bedroom apartments.", fig.retina = 2, out.width="100%"}
+knitr::include_graphics("img/craigslist_human.png")
+```
 
 Based on what our browser shows us, it's pretty easy to find the size and price
 for each apartment listed. But we would like to be able to obtain that information
@@ -1004,6 +1009,7 @@ selectors <- paste("td:nth-child(5)",
              "td:nth-child(7)",
              ".infobox:nth-child(122) td:nth-child(1)",
              ".infobox td:nth-child(3)", sep=",")
+
 population_nodes <- html_nodes(page, selectors)
 head(population_nodes)
 ```
@@ -1126,8 +1132,12 @@ few variables of interest: `created_at`,  `retweet_screen_name`, `is_retweet`,
 and `text`.
 
 ```{r 01-select-tweets, message = FALSE, warning = FALSE}
-tidyverse_tweets <- tidyverse_tweets |> select(created_at, retweet_screen_name, 
-                                                is_retweet, text)
+tidyverse_tweets <- select(tidyverse_tweets, 
+                           created_at, 
+                           retweet_screen_name,
+                           is_retweet, 
+                           text)
+
 tidyverse_tweets
 ```
 
