--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -4,6 +4,8 @@ author: "Tiffany-Anne Timbers, Trevor Campbell & Melissa Lee"
 date: "`r Sys.Date()`"
 knit: "bookdown::render_book"
 documentclass: krantz
+classoption:
+  - krantz2
 bibliography: [references.bib]
 biblio-style: apalike
 link-citations: yes
